# SimplePKPDProject

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
pk_models/: one_compartment.cpp  one_compartment.hpp  utils.cpp  utils.hpp
